--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -15,14 +15,14 @@
         android:layout_marginTop="75dp">
 
 
-       <RelativeLayout
-           android:layout_width="match_parent"
-           android:layout_height="match_parent">
-           <ImageView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:src="@drawable/logo_daniel2"/>
-       </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logo_daniel2"/>
+        </RelativeLayout>
 
 
 
@@ -30,6 +30,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/buttonA"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginLeft="55dp"
@@ -41,9 +42,10 @@
 
         android:fontFamily="@font/roboto_bold"
         android:textSize="24sp"
-         />
+        />
 
     <Button
+        android:id="@+id/buttonM"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginLeft="55dp"
