--- a/main/res/layout/automation.xml
+++ b/main/res/layout/automation.xml
@@ -29,7 +29,7 @@
         android:textColor="#000000" />
 
     <Button
-
+        android:id="@+id/Cancel"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
